fix blockquote alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -76,6 +76,7 @@ p {
 }
 
 blockquote {
+  align-self: start;
   background-color: var(--dark-color);
   color: var(--light-color);
   padding: 2rem;
